tests/ui/printdoc-no-named-arg.stderr
error: there is no argument named `named`
 --> $DIR/printdoc-no-named-arg.rs:4:16
  |
4 |     printdoc!("{named}");
  |                ^^^^^^^
